<resources>
    <string name="app_name">QuickMsg</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="LoginLabel">Login</string>
    <string name="signupLabel">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_label">Sign Up</string>

    <string name="menu_logout_label">Logout</string>

    <string name="signup_error_title">Oops !</string>
    <string name="signup_error_msg">Please make sure you enter username and password</string>
    <string name="login_error_title">Oops !</string>
    <string name="login_error_msg">Please make sure you enter username, password, and email</string>


</resources>
