<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.pchsu.quickmsg.SignUpActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:inputType="textEmailAddress"
        android:id="@+id/emailSignup"
        android:textSize="30sp"
        android:hint="@string/email_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailSignup"
        android:id="@+id/usernameSignup"
        android:inputType="none"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:hint="@string/username_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameSignup"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordSignup"
        android:textSize="30sp"
        android:hint="@string/password_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupLabel"
        android:id="@+id/signupButton"
        android:layout_below="@+id/passwordSignup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"/>

</RelativeLayout>
