<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.pchsu.quickmsg.LoginActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/loginImage"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="50"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="false"
        android:layout_weight="50">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameSignup"
            android:hint="@string/username_hint"
            android:textSize="40sp"
            android:textColorHint="@android:color/darker_gray"
            android:layout_alignParentTop="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEdit"
            android:hint="@string/password_hint"
            android:textSize="40sp"
            android:textColorHint="@android:color/darker_gray"
            android:layout_below="@+id/usernameSignup"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginLabel"
            android:id="@+id/loginButton"
            android:textSize="30sp"
            android:layout_below="@+id/passwordEdit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Sign Up"
            android:id="@+id/signupText"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>


</LinearLayout>
